# transcribe_ru

./: .gitignore  README.md  pyproject.toml  requirements.txt  transcribe
src/: __init__.py  batch.py  transcribe.py
